[gd_scene load_steps=10 format=2]

[ext_resource path="res://sezam/Sezam.gd" type="Script" id=1]
[ext_resource path="res://tileset/tileset.tres" type="TileSet" id=2]
[ext_resource path="res://sezam/waterpump/WaterPump.tscn" type="PackedScene" id=3]
[ext_resource path="res://sezam/zone/ActivationZone.tscn" type="PackedScene" id=4]
[ext_resource path="res://sezam/door/Door.tscn" type="PackedScene" id=5]
[ext_resource path="res://coins/GoldCoin.tscn" type="PackedScene" id=6]
[ext_resource path="res://coins/SilverCoin.tscn" type="PackedScene" id=7]
[ext_resource path="res://elixir/Elixir.tscn" type="PackedScene" id=8]

[sub_resource type="Animation" id=1]

resource_name = "door_open_animation"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("DoorLeft:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -32, 112 ), Vector2( -96, 112 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DoorRight:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 32, 112 ), Vector2( 96, 112 ) ]
}

[node name="Sezam" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="TileMap_ground" type="TileMap" parent="." index="0"]

mode = 0
tile_set = ExtResource( 2 )
cell_size = Vector2( 64, 64 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( -196612, 1, 0, -196611, 1, 0, -196610, 1, 0, -196609, 1, 0, -262144, 1, 0, -262143, 1, 0, -262142, 1, 0, -262141, 1, 0, -131076, 1, 0, -131075, 2, 0, -131074, 2, 0, -131073, 2, 0, -196608, 2, 0, -196607, 2, 0, -196606, 2, 0, -196605, 1, 0, -65540, 1, 0, -65539, 2, 0, -65538, 2, 0, -65537, 2, 0, -131072, 2, 0, -131071, 2, 0, -131070, 2, 0, -131069, 1, 0, -4, 1, 0, -3, 2, 0, -2, 2, 0, -1, 2, 0, -65536, 2, 0, -65535, 2, 0, -65534, 2, 0, -65533, 1, 0, 65532, 1, 0, 65533, 2, 0, 65534, 2, 0, 65535, 2, 0, 0, 2, 0, 1, 2, 0, 2, 2, 0, 3, 1, 0, 131068, 1, 0, 131069, 2, 0, 131070, 2, 0, 131071, 2, 0, 65536, 2, 0, 65537, 2, 0, 65538, 2, 0, 65539, 1, 0, 196604, 1, 0, 196605, 1610612737, 0, 196606, 1, 0, 131073, 1610612737, 0, 131074, 1610612737, 0, 131075, 1, 0 )
_sections_unfolded = [ "Cell" ]

[node name="TileMap_wall" type="TileMap" parent="." index="1"]

mode = 0
tile_set = ExtResource( 2 )
cell_size = Vector2( 64, 64 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( -196612, 5, 0, -196611, 4, 0, -196610, 4, 0, -196609, 4, 0, -262144, 4, 0, -262143, 4, 0, -262142, 4, 0, -262141, -1610612731, 0, -131076, -1610612732, 0, -131075, 2, 0, -131074, 2, 0, -131073, 2, 0, -196608, 2, 0, -196607, 2, 0, -196606, 2, 0, -196605, -1610612732, 0, -65540, -1610612732, 0, -65539, 2, 0, -65538, 2, 0, -65537, 2, 0, -131072, 2, 0, -131071, 2, 0, -131070, 2, 0, -131069, -1610612732, 0, -4, -1610612732, 0, -3, 2, 0, -2, 2, 0, -1, 2, 0, -65536, 2, 0, -65535, 2, 0, -65534, 2, 0, -65533, -1610612732, 0, 65532, -1610612732, 0, 65533, 2, 0, 65534, 2, 0, 65535, 2, 0, 0, 2, 0, 1, 2, 0, 2, 2, 0, 3, -1610612732, 0, 131068, -1610612732, 0, 131069, 2, 0, 131070, 2, 0, 131071, 2, 0, 65536, 2, 0, 65537, 2, 0, 65538, 2, 0, 65539, -1610612732, 0, 196604, -1073741819, 0, 196605, 1610612740, 0, 131073, 1, 0, 131074, 1610612740, 0, 131075, 1610612741, 0 )
_sections_unfolded = [ "Cell" ]

[node name="WaterPumpLeft" parent="." index="2" instance=ExtResource( 3 )]

position = Vector2( -96, 160 )
scale = Vector2( -1, 1 )

[node name="WaterPumpRight" parent="." index="3" instance=ExtResource( 3 )]

position = Vector2( 97, 160 )

[node name="ActivationZone" parent="." index="4" instance=ExtResource( 4 )]

position = Vector2( 0.641296, 160.591 )
_sections_unfolded = [ "Transform" ]

[node name="DoorLeft" parent="." index="5" instance=ExtResource( 5 )]

position = Vector2( -32, 112 )
scale = Vector2( -1, 1 )
_sections_unfolded = [ "Transform" ]

[node name="DoorRight" parent="." index="6" instance=ExtResource( 5 )]

position = Vector2( 32, 112 )
_sections_unfolded = [ "Transform" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="7"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/door_open_animation = SubResource( 1 )
blend_times = [  ]

[node name="GoldCoin_1" parent="." index="8" instance=ExtResource( 6 )]

position = Vector2( -104.578, -104.578 )

[node name="GoldCoin_2" parent="." index="9" instance=ExtResource( 6 )]

position = Vector2( -44.7213, -104.578 )

[node name="GoldCoin_3" parent="." index="10" instance=ExtResource( 6 )]

position = Vector2( 23.2977, -103.218 )

[node name="GoldCoin_4" parent="." index="11" instance=ExtResource( 6 )]

position = Vector2( 96.7582, -105.938 )

[node name="GoldCoin_5" parent="." index="12" instance=ExtResource( 6 )]

position = Vector2( -101.857, -37.9194 )

[node name="GoldCoin_6" parent="." index="13" instance=ExtResource( 6 )]

position = Vector2( -35.1986, -35.1986 )

[node name="GoldCoin_7" parent="." index="14" instance=ExtResource( 6 )]

position = Vector2( 43.7034, -39.2798 )

[node name="GoldCoin_8" parent="." index="15" instance=ExtResource( 6 )]

position = Vector2( -96.4157, 32.8203 )

[node name="GoldCoin_9" parent="." index="16" instance=ExtResource( 6 )]

position = Vector2( -77.3704, 38.2619 )

[node name="GoldCoin_10" parent="." index="17" instance=ExtResource( 6 )]

position = Vector2( -54.244, 43.7034 )

[node name="GoldCoin_11" parent="." index="18" instance=ExtResource( 6 )]

position = Vector2( 60.028, 28.7392 )

[node name="SilverCoin_1" parent="." index="19" instance=ExtResource( 7 )]

position = Vector2( -157.804, 29.9284 )

[node name="SilverCoin_2" parent="." index="20" instance=ExtResource( 7 )]

position = Vector2( -155.083, -87.0643 )

[node name="SilverCoin_3" parent="." index="21" instance=ExtResource( 7 )]

position = Vector2( 149.642, -81.6228 )

[node name="SilverCoin_4" parent="." index="22" instance=ExtResource( 7 )]

position = Vector2( 148.281, 42.1718 )

[node name="Elixir_1" parent="." index="23" instance=ExtResource( 8 )]

position = Vector2( -156.574, 87.9252 )
scale = Vector2( 0.5, 0.5 )
_sections_unfolded = [ "Transform" ]

[node name="Elixir_2" parent="." index="24" instance=ExtResource( 8 )]

position = Vector2( -153.853, -30.4279 )
scale = Vector2( 0.5, 0.5 )
_sections_unfolded = [ "Transform" ]

[node name="Elixir_3" parent="." index="25" instance=ExtResource( 8 )]

position = Vector2( -148.412, -152.862 )
scale = Vector2( 0.5, 0.5 )
_sections_unfolded = [ "Transform" ]

[node name="Elixir_4" parent="." index="26" instance=ExtResource( 8 )]

position = Vector2( -2.85126, -154.222 )
scale = Vector2( 0.5, 0.5 )
_sections_unfolded = [ "Transform" ]

[node name="Elixir_5" parent="." index="27" instance=ExtResource( 8 )]

position = Vector2( 144.07, -155.583 )
scale = Vector2( 0.5, 0.5 )
_sections_unfolded = [ "Transform" ]

[node name="Elixir_6" parent="." index="28" instance=ExtResource( 8 )]

position = Vector2( 146.79, -14.1033 )
scale = Vector2( 0.5, 0.5 )
_sections_unfolded = [ "Transform" ]

[node name="Elixir_7" parent="." index="29" instance=ExtResource( 8 )]

position = Vector2( 153.592, 87.9252 )
scale = Vector2( 0.5, 0.5 )
_sections_unfolded = [ "Transform" ]

[connection signal="body_entered" from="ActivationZone" to="." method="_on_ActivationZone_body_entered"]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]


